--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="sqlite-jdbc-3.20.0.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-java-5.1.44-bin.jar"/>
+	<classpathentry kind="lib" path="postgresql-42.1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
