--- a/.classpath
+++ b/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="lib" path="sqlite-jdbc-3.20.0.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-java-5.1.44-bin.jar"/>
 	<classpathentry kind="lib" path="postgresql-42.1.4.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
