--- a/pom.xml
+++ b/pom.xml
@@ -22,5 +22,20 @@
   		<artifactId>json</artifactId>
   		<version>20171018</version>
   	</dependency>
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.44</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.postgresql</groupId>
+	    <artifactId>postgresql</artifactId>
+	    <version>42.1.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.xerial</groupId>
+	    <artifactId>sqlite-jdbc</artifactId>
+	    <version>3.20.0</version>
+	</dependency>
   </dependencies>
 </project>
