--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,10 @@
 	    <artifactId>sqlite-jdbc</artifactId>
 	    <version>3.20.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>1.3.2</version>
+	</dependency>
   </dependencies>
 </project>
